--- a/.github/workflows/Backend.yml
+++ b/.github/workflows/Backend.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.0.100-preview9-014004
+          dotnet-version: 3.1.102
       - name: Build Sting.Backend
         run: dotnet build --configuration Release src/Sting.Backend/Sting.Backend
       - name: Build Sting.Models
