--- a/.github/workflows/Raspberry.yml
+++ b/.github/workflows/Raspberry.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.0.100-preview9-014004
+          dotnet-version: 3.1.102
       - name: Build Sting.Application
         run: dotnet build --configuration Release src/Sting.Measurements/Sting.Application
       - name: Build Sting.Core
