--- a/src/Sting.Measurements/Tools/ConfigurationGenerator/ConfigurationGenerator.csproj
+++ b/src/Sting.Measurements/Tools/ConfigurationGenerator/ConfigurationGenerator.csproj
@@ -10,12 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Sting.Devices">
-      <HintPath>..\..\Sting.Devices\bin\Debug\netcoreapp3.0\Sting.Devices.dll</HintPath>
-    </Reference>
-    <Reference Include="Sting.Models">
-      <HintPath>..\..\..\Sting.Backend\Sting.Models\bin\Debug\netstandard2.0\Sting.Models.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\..\Sting.Devices\Sting.Devices.csproj" />
+    <ProjectReference Include="..\..\..\Sting.Backend\Sting.Models\Sting.Models.csproj" />
   </ItemGroup>
 
 </Project>
