--- a/.github/workflows/Raspberry.yml
+++ b/.github/workflows/Raspberry.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Build Sting.Devices
         run: dotnet build --configuration Release src/Sting.Measurements/Sting.Devices
       - name: Build Sting.Models
-        run: dotnet build --configuration Release src/Sting.Backend/Sting.Models
+        run: dotnet build --configuration Release src/Sting.Measurements/Sting.Models
