--- a/src/Sting.Measurements/Tools/ConfigurationGenerator/ConfigurationGenerator.csproj
+++ b/src/Sting.Measurements/Tools/ConfigurationGenerator/ConfigurationGenerator.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,11 +7,12 @@
 
   <ItemGroup>
     <PackageReference Include="Iot.Device.Bindings" Version="1.1.0-prerelease.20121.1" />
+    <PackageReference Include="Google.Protobuf" Version="3.11.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Sting.Devices\Sting.Devices.csproj" />
-    <ProjectReference Include="..\..\..\Sting.Backend\Sting.Models\Sting.Models.csproj" />
+    <ProjectReference Include="..\..\Sting.Core\Sting.Core.csproj" />
   </ItemGroup>
 
 </Project>
