--- a/src/Sting.WebApp/package.json
+++ b/src/Sting.WebApp/package.json
@@ -36,7 +36,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.0",
     "@angular/cli": "^9.1.0",
-    "@angular/compiler-cli": "^9.0.7",
+    "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "^9.1.0",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
@@ -50,7 +50,7 @@
     "karma-jasmine": "~3.1.1",
     "karma-jasmine-html-reporter": "^1.5.3",
     "protractor": "^5.4.3",
-    "ts-node": "~8.8.1",
+    "ts-node": "^8.8.2",
     "tslint": "^6.1.1",
     "typescript": "3.7.5"
   }
