--- a/src/Sting.WebApp/package.json
+++ b/src/Sting.WebApp/package.json
@@ -11,16 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.6",
-    "@angular/common": "^9.0.6",
-    "@angular/compiler": "^9.0.6",
-    "@angular/core": "^9.0.6",
-    "@angular/forms": "^9.0.6",
+    "@angular/animations": "^9.1.0",
+    "@angular/common": "^9.1.0",
+    "@angular/compiler": "^9.1.0",
+    "@angular/core": "^9.1.0",
+    "@angular/forms": "^9.1.0",
     "@angular/http": "^7.2.16",
     "@angular/localize": "^9.1.0",
-    "@angular/platform-browser": "^9.0.6",
-    "@angular/platform-browser-dynamic": "^9.0.6",
-    "@angular/router": "^9.0.6",
+    "@angular/platform-browser": "^9.1.0",
+    "@angular/platform-browser-dynamic": "^9.1.0",
+    "@angular/router": "^9.1.0",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.1",
@@ -29,14 +29,14 @@
     "jquery": "^3.4.1",
     "npm": "^6.14.4",
     "popper.js": "^1.16.1",
-    "rxjs": "~6.5.5",
+    "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.0",
     "@angular/cli": "^9.1.0",
-    "@angular/compiler-cli": "^9.1.0",
+    "@angular/compiler-cli": "^9.0.7",
     "@angular/language-service": "^9.1.0",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
@@ -50,7 +50,7 @@
     "karma-jasmine": "~3.1.1",
     "karma-jasmine-html-reporter": "^1.5.3",
     "protractor": "^5.4.3",
-    "ts-node": "^8.8.2",
+    "ts-node": "~8.8.1",
     "tslint": "^6.1.1",
     "typescript": "3.7.5"
   }
