--- a/src/Sting.Backend/Sting.Backend/Sting.Backend.csproj
+++ b/src/Sting.Backend/Sting.Backend/Sting.Backend.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
     <UserSecretsId>3a873397-5651-4d27-9190-a28be7330686</UserSecretsId>
   </PropertyGroup>
