--- a/src/Sting.Measurements/nuget.config
+++ b/src/Sting.Measurements/nuget.config
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<packageSources>
 		<clear />
 		<add key="blobfeed.net" value="https://dotnetfeed.blob.core.windows.net/dotnet-iot/index.json" />
 		<add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+		<add key="Dotnet5" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet5/nuget/v3/index.json" />
 	</packageSources>	
 </configuration>
