--- a/.github/workflows/Backend.yml
+++ b/.github/workflows/Backend.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.102
+          dotnet-version: '5.0.100-preview.5.20279.10'
       - name: Build Sting.Backend
         run: dotnet build --configuration Release src/Sting.Backend/Sting.Backend
