--- a/src/Sting.Measurements/Tools/ConfigurationGenerator/ConfigurationGenerator.csproj
+++ b/src/Sting.Measurements/Tools/ConfigurationGenerator/ConfigurationGenerator.csproj
@@ -2,12 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Iot.Device.Bindings" Version="1.1.0-prerelease.20121.1" />
-    <PackageReference Include="Google.Protobuf" Version="3.11.4" />
+    <PackageReference Include="Google.Protobuf" Version="3.12.3" />
   </ItemGroup>
 
   <ItemGroup>
